Custom--app/main/default/objects/AZB_Update__c/AZB_Update__c.object-meta.xml
<CustomObject>
    <description>This object is the message queue for all AZ Bidder updates.
They will send records to this queue for each update and insert triggers will apply the business logic.  Note that these messages may indicate changes in Prospects or Pipeline records.</description>
    <label>AZB Update</label>
    <nameField>
        <displayFormat>AZBU-{0000}</displayFormat>
        <label>AZB Update Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AZB Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>