Custom--app/main/default/objects/AZB_Update__c/fields/Address_Validated_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated_Successfully__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Validated Successfully</label>
    <type>Checkbox</type>
</CustomField>