Custom--app/main/default/objects/AZB_Update__c/fields/Address_Validated_Zip__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated_Zip__c</fullName>
    <label>Address Validated Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>