Custom--app/main/default/objects/AZB_Update__c/fields/APN__c.field-meta.xml
<CustomField>
    <fullName>APN__c</fullName>
    <label>APN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>