Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Back_Taxes_Due__c.field-meta.xml
<CustomField>
    <fullName>AZB_Back_Taxes_Due__c</fullName>
    <label>AZB Back Taxes Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>