Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Bid_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>AZB_Bid_Cancelled_Date__c</fullName>
    <label>AZB Bid Cancelled Date</label>
    <type>Date</type>
</CustomField>