Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Bid_Status__c.field-meta.xml
<CustomField>
    <fullName>AZB_Bid_Status__c</fullName>
    <label>AZB Bid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bid Placed</fullName>
            </value>
            <value>
                <fullName>Bid Executed</fullName>
            </value>
            <value>
                <fullName>Bid Lost</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Cancelled by Bidder</fullName>
            </value>
            <value>
                <fullName>Cancelled by Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>