Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>AZB_Bid_Type__c</fullName>
    <formula>'Trustee'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AZB Bid Type</label>
    <type>Text</type>
</CustomField>