Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Drive_Report_Notes__c.field-meta.xml
<CustomField>
    <fullName>AZB_Drive_Report_Notes__c</fullName>
    <label>AZB Drive Report Notes</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>