Custom--app/main/default/objects/AZB_Update__c/fields/AZB_ID__c.field-meta.xml
<CustomField>
    <fullName>AZB_ID__c</fullName>
    <description>This is AZBidder's File Id.  It is required, and their external ID.</description>
    <externalId>true</externalId>
    <label>AZB ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>