Custom--app/main/default/objects/AZB_Update__c/fields/AZB_IH_Final_Max_Bid__c.field-meta.xml
<CustomField>
    <fullName>AZB_IH_Final_Max_Bid__c</fullName>
    <label>AZB IH Final Max Bid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>