Custom--app/main/default/objects/AZB_Update__c/fields/AZB_IH_Original_Bid_Max__c.field-meta.xml
<CustomField>
    <fullName>AZB_IH_Original_Bid_Max__c</fullName>
    <label>AZB IH Original Bid Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>