Custom--app/main/default/objects/AZB_Update__c/fields/AZB_IH_Win_Date__c.field-meta.xml
<CustomField>
    <fullName>AZB_IH_Win_Date__c</fullName>
    <label>AZB IH Win Date</label>
    <type>Date</type>
</CustomField>