Custom--app/main/default/objects/AZB_Update__c/fields/AZB_IH_Won_Property__c.field-meta.xml
<CustomField>
    <fullName>AZB_IH_Won_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AZB IH Won Property</label>
    <type>Checkbox</type>
</CustomField>