Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Occupied_Status__c.field-meta.xml
<CustomField>
    <fullName>AZB_Occupied_Status__c</fullName>
    <label>AZB Occupied Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>