Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Open_Bid__c.field-meta.xml
<CustomField>
    <fullName>AZB_Open_Bid__c</fullName>
    <label>AZB Open Bid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>