Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Place__c.field-meta.xml
<CustomField>
    <fullName>AZB_Place__c</fullName>
    <label>AZB Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>