Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Property_Assessor_Value__c.field-meta.xml
<CustomField>
    <fullName>AZB_Property_Assessor_Value__c</fullName>
    <label>AZB Property Assessor Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>