Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Property_Levels__c.field-meta.xml
<CustomField>
    <fullName>AZB_Property_Levels__c</fullName>
    <label>AZB Property Levels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>