Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Property_Pool__c.field-meta.xml
<CustomField>
    <fullName>AZB_Property_Pool__c</fullName>
    <description>0 for No pool, or the # of gallons (size) for any existing pool.</description>
    <label>AZB Property Pool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>