Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Property_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>AZB_Property_Use_Code__c</fullName>
    <label>AZB Property Use Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>