Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Trustee_Date_Final_Pmt__c.field-meta.xml
<CustomField>
    <fullName>AZB_Trustee_Date_Final_Pmt__c</fullName>
    <label>AZB Trustee Date Final Pmt</label>
    <type>Date</type>
</CustomField>