Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Trustee_Deposit_Pmt__c.field-meta.xml
<CustomField>
    <fullName>AZB_Trustee_Deposit_Pmt__c</fullName>
    <label>AZB Trustee Deposit Pmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>