Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Trustee_Number__c.field-meta.xml
<CustomField>
    <fullName>AZB_Trustee_Number__c</fullName>
    <label>AZB Trustee Number</label>
    <length>36</length>
    <type>Text</type>
</CustomField>