Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Trustee_Sale_Time__c.field-meta.xml
<CustomField>
    <fullName>AZB_Trustee_Sale_Time__c</fullName>
    <description>Text field holding the time that an auction was scheduled.  This field is not validated in any way.</description>
    <label>AZB Trustee Sale Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>