Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Underwriting_Notes__c.field-meta.xml
<CustomField>
    <fullName>AZB_Underwriting_Notes__c</fullName>
    <label>AZB Underwriting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>