Custom--app/main/default/objects/AZB_Update__c/fields/AZB_User__c.field-meta.xml
<CustomField>
    <fullName>AZB_User__c</fullName>
    <description>This field represents the name of the AZ Bidder user who modified the data.  Note that there is no guaranteed match in the Salesforce database.  (Perhaps we could reject records that don't match?)</description>
    <label>AZB User</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>