Custom--app/main/default/objects/AZB_Update__c/fields/AZB_User_Email__c.field-meta.xml
<CustomField>
    <fullName>AZB_User_Email__c</fullName>
    <description>This is the email address of the AZ Bidder user.  It is not necessarily an InvitationHomes email address.</description>
    <label>AZB User Email</label>
    <type>Email</type>
</CustomField>