Custom--app/main/default/objects/AZB_Update__c/fields/AZB_User_ID__c.field-meta.xml
<CustomField>
    <fullName>AZB_User_ID__c</fullName>
    <description>This again must be converted to a Salesforce User.  Note that this is not guaranteed, though, and may be rejected by the insert trigger.</description>
    <label>AZB User ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>