Custom--app/main/default/objects/AZB_Update__c/fields/AZB_Winning_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>AZB_Winning_Bid_Amount__c</fullName>
    <label>AZB Winning Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>