Custom--app/main/default/objects/AZB_Update__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <label>Baths</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>