Custom--app/main/default/objects/AZB_Update__c/fields/Bid_Service__c.field-meta.xml
<CustomField>
    <fullName>Bid_Service__c</fullName>
    <description>This needs to be converted to the corresponding "Account" before migrating to Prospect or Pipeline record.</description>
    <label>Bid Service</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>