Custom--app/main/default/objects/AZB_Update__c/fields/Bid_Service_Expense__c.field-meta.xml
<CustomField>
    <fullName>Bid_Service_Expense__c</fullName>
    <label>Bid Service Expense</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>