Custom--app/main/default/objects/AZB_Update__c/fields/Form_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Payment__c</fullName>
    <label>Form of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Cashier's Check</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>