Custom--app/main/default/objects/AZB_Update__c/fields/IH_Force_Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>IH_Force_Run_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IH Force Run Trigger</label>
    <type>Checkbox</type>
</CustomField>