Custom--app/main/default/objects/AZB_Update__c/fields/IH_Last_Result_Message__c.field-meta.xml
<CustomField>
    <fullName>IH_Last_Result_Message__c</fullName>
    <label>IH Last Result Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>