Custom--app/main/default/objects/AZB_Update__c/fields/IH_Last_Result_Success__c.field-meta.xml
<CustomField>
    <fullName>IH_Last_Result_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IH Last Result Success</label>
    <type>Checkbox</type>
</CustomField>