Custom--app/main/default/objects/AZB_Update__c/fields/IH_Needs_Processing__c.field-meta.xml
<CustomField>
    <fullName>IH_Needs_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a new update that needs to be processed by IH</description>
    <label>IH Needs Processing</label>
    <type>Checkbox</type>
</CustomField>