Custom--app/main/default/objects/AZB_Update__c/fields/IH_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>IH_Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the pipeline record created for the AZB record upsert.</description>
    <label>IH Pipeline</label>
    <referenceTo>Property_Opportunity__c</referenceTo>
    <relationshipLabel>AZB Updates</relationshipLabel>
    <relationshipName>AZB_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>