Custom--app/main/default/objects/AZB_Update__c/fields/IH_Prospect__c.field-meta.xml
<CustomField>
    <fullName>IH_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the prospect created for this AZB_Update master record.</description>
    <label>IH Prospect</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipLabel>AZB Updates</relationshipLabel>
    <relationshipName>AZB_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>