Custom--app/main/default/objects/AZB_Update__c/fields/IH_Trustee_Company__c.field-meta.xml
<CustomField>
    <fullName>IH_Trustee_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IH Trustee Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AZB Updates</relationshipLabel>
    <relationshipName>AZB_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>