Custom--app/main/default/objects/AZB_Update__c/fields/IH_User_Id__c.field-meta.xml
<CustomField>
    <fullName>IH_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IH User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AZB_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>