Custom--app/main/default/objects/AZB_Update__c/fields/IH_User_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>IH_User_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to enable workflow processing for the difficult-to-handle User not found error.
If this is marked true, then up to 1 email may be sent to this user's email address if this user's id was not found in his User record.</description>
    <label>IH User Not Found</label>
    <type>Checkbox</type>
</CustomField>