Custom--app/main/default/objects/AZB_Update__c/fields/Lot_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Sq_Ft__c</fullName>
    <label>Lot Sq Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>