Custom--app/main/default/objects/AZB_Update__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>This is a text field which must be converted into the lookup value before using it in Prospect or Pipeline.</description>
    <label>Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>