Custom--app/main/default/objects/AZB_Update__c/fields/Property_County__c.field-meta.xml
<CustomField>
    <fullName>Property_County__c</fullName>
    <label>Property County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>