Custom--app/main/default/objects/AZB_Update__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <label>Property State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>