Custom--app/main/default/objects/AZB_Update__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <label>Property Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>