Custom--app/main/default/objects/AZB_Update__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This is a text field which must be converted into the lookup value before using it in Prospect or Pipeline.</description>
    <label>Market2</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>