Custom--app/main/default/objects/AZB_Update__c/fields/Trustee_Company__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Company__c</fullName>
    <label>Trustee Company</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>