Custom--app/main/default/objects/AZB_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IH_Last_Result_Message__c</columns>
    <columns>Region__c</columns>
    <columns>Trustee_Company__c</columns>
    <columns>IH_Trustee_Company__c</columns>
    <columns>IH_Pipeline__c</columns>
    <columns>IH_Prospect__c</columns>
    <columns>Property_Zip_Code__c</columns>
    <columns>AZB_Bid_Status__c</columns>
    <columns>AZB_IH_Original_Bid_Max__c</columns>
    <columns>AZB_IH_Win_Date__c</columns>
    <columns>IH_User_Not_Found__c</columns>
    <columns>IH_Last_Result_Success__c</columns>
    <columns>IH_Needs_Processing__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>