Custom--app/main/default/objects/AZB_Update__c/listViews/Atlanta_Rescinded_Properties.listView-meta.xml
<ListView>
    <fullName>Atlanta_Rescinded_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Street__c</columns>
    <columns>Property_City__c</columns>
    <columns>AZB_IH_Win_Date__c</columns>
    <columns>AZB_ID__c</columns>
    <columns>IH_Pipeline__c</columns>
    <columns>IH_Prospect__c</columns>
    <columns>AZB_IH_Original_Bid_Max__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AZB_ID__c</field>
        <operation>contains</operation>
        <value>-R</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Atlanta</value>
    </filters>
    <label>Atlanta Rescinded Properties</label>
    <sharedTo>
        <role>Executive_Atlanta</role>
        <role>Team_Member_Atlanta</role>
    </sharedTo>
</ListView>