Custom--app/main/default/objects/AZB_Update__c/listViews/AZB_Failures.listView-meta.xml
<ListView>
    <fullName>AZB_Failures</fullName>
    <columns>NAME</columns>
    <columns>Address_Validated_Successfully__c</columns>
    <columns>Region__c</columns>
    <columns>Property_Street__c</columns>
    <columns>AZB_User_ID__c</columns>
    <columns>AZB_User_Email__c</columns>
    <columns>IH_Needs_Processing__c</columns>
    <columns>IH_Last_Result_Message__c</columns>
    <columns>IH_Last_Result_Success__c</columns>
    <columns>IH_Prospect__c</columns>
    <columns>IH_Pipeline__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>APN__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Address_Validation_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IH_Last_Result_Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>AZB Failures</label>
</ListView>