Custom--app/main/default/objects/AZB_Update__c/listViews/AZB_User_Not_Found.listView-meta.xml
<ListView>
    <fullName>AZB_User_Not_Found</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>AZB_User_ID__c</columns>
    <columns>AZB_User_Email__c</columns>
    <columns>IH_User_Not_Found__c</columns>
    <columns>AZB_IH_Original_Bid_Max__c</columns>
    <columns>AZB_IH_Win_Date__c</columns>
    <columns>Property_Street__c</columns>
    <columns>IH_Last_Result_Message__c</columns>
    <columns>IH_Force_Run_Trigger__c</columns>
    <columns>IH_Needs_Processing__c</columns>
    <columns>IH_Prospect__c</columns>
    <columns>IH_Pipeline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IH_User_Not_Found__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>AZB_IH_Win_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>*AZB User Not Found</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>