Custom--app/main/default/objects/AZB_Update__c/listViews/No_Pipeline_Record_All_Regions.listView-meta.xml
<ListView>
    <fullName>No_Pipeline_Record_All_Regions</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>AZB_User_ID__c</columns>
    <columns>AZB_User_Email__c</columns>
    <columns>AZB_IH_Original_Bid_Max__c</columns>
    <columns>AZB_Bid_Status__c</columns>
    <columns>Property_Street__c</columns>
    <columns>IH_Prospect__c</columns>
    <columns>IH_Pipeline__c</columns>
    <columns>IH_Last_Result_Message__c</columns>
    <columns>IH_Force_Run_Trigger__c</columns>
    <columns>IH_Needs_Processing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AZB_IH_Original_Bid_Max__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>IH_Pipeline__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>AZB_Bid_Status__c</field>
        <operation>equals</operation>
        <value>Bid Executed</value>
    </filters>
    <label>*No Pipeline Record (All Regions)</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>